# CG_Project

./: .clang-format  .gitignore  CGAL_addon.py  CMakeLists.txt  EMST.cpp  EMST.ui  EMST2D.cpp  Intersection.cpp  Polygon.cpp  Polygon.ui  README.md  algo.txt  assignment.cpp  asurface3D.cpp  boundary_curve.cpp  commands.cmd  memTest3D.cpp  psurface3D.cpp  reconstruction.cpp  remesh.py  run.py  run.sh  runAndBlend.sh  runCmd.cmd  shapeKey_animate.py  ssurface3D.cpp  stest3DwithPost.cpp  surface3D.cpp  test.dot  test.py  test1.cpp  test2.dot  test2D.cpp  test3D.cpp  test3DwithPost.cpp  util.h  visualize.blend
EMST3D/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  Scene.cpp  Scene.h  T3_demo.qrc
Report/: oneColReport.aux  oneColReport.lof  oneColReport.out  oneColReport.tex  oneColReport.toc  references.bib  unifiedReconstructionSMI15.aux  unifiedReconstructionSMI15.blg  unifiedReconstructionSMI15.out  unifiedReconstructionSMI15.tex
SMI_template/: references.bib  unifiedReconstructionSMI15.aux  unifiedReconstructionSMI15.bbl  unifiedReconstructionSMI15.blg  unifiedReconstructionSMI15.tex
input_3D/: 83-bumpy_sphere.off  83-bumpy_sphere.ply  CubeSharp.xyz  CubeSmooth.xyz  Rhombus.xyz  Sphere.xyz  bunny.xyz  cactus.dl  cactus.jv.off  cactus.xyz  daratechOrig.ply  dragon_vrip2.xyz  dragon_vrip_res4.xyz  drill_shaft_vrip.xyz  fandisk.xyz  fandisk_surf.off  plane.xyz  rhombus.off  rhombusSmall.xyz  test_input_eight.xyz
